// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Use Vento as \`.html\` engine > override-html-engine 1`] = `
"
<p>2 + 2 = 4</p>

<p>This is a cool page</p>
"
`;

exports[`Use Vento as \`.md\` engine > override-md-engine 1`] = `
"<p>2 + 2 = 4</p>
<p>This is a cool page</p>
"
`;
